--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
     <header> 
@@ -11,12 +13,29 @@
 
         <nav>
             <a href="#" class="active">Home</a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
+            <a href="#">Serviços</a>
+            <a href="#">Tecnologias</a>
+            <a href="#">Formação</a>
+            <a href="#">Experiência</a>
+            <a href="#">Contato</a>
         </nav>
 
     </header>
+    <section class="home">
+        <div class="home-img">
+            <img src="assets/gojo.png" alt="">
+        </div>
+        <div class="home-content">
+            <h1>Hi, It's <span>Danrley</span></h1>
+            <h3 class="typing-text">I'm a <span></span></h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, ullam a eius, odio delectus laudantium similique perferendis doloremque numquam amet, neque sit harum consequatur pariatur corporis vero ab consequuntur accusamus?</p>
+            <div class="social-icons">
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+            <a href="#"></a>
+        </div>
+    </section>
 </body>
 </html>
