feat: styles att.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +9,15 @@
 </head>
 <body>
     <header> 
-        <a href="#" class="logo">Danrley</a>
+        <a href="#" class="logo"><i class="fa-brands fa-dev"></i> Danrley</a>
 
         <nav>
             <a href="#" class="active">Home</a>
-            <a href="#">Serviços</a>
-            <a href="#">Tecnologias</a>
-            <a href="#">Formação</a>
-            <a href="#">Experiência</a>
-            <a href="#">Contato</a>
+            <a href="#">Services</a>
+            <a href="#">Skills</a>
+            <a href="#">Education</a>
+            <a href="#">Experience</a>
+            <a href="#">Contact</a>
         </nav>
 
     </header>
@@ -34,7 +34,7 @@
                 <a href="#"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="#"></a>
+            <a href="#" class="btn">Hire me</a>
         </div>
     </section>
 </body>
